crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__list__cons_arity.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "format!(\"--- before\\n{}\\n--- after\\n{}\\n--- errors\\n{left:?}\\n{right:?}\",\npretty(before), pretty(after))"
---
--- before
case@List (con (list integer) []) of
  Cons x#1 -> 42
--- after
case@List (con (list integer) []) of
  Cons x#1 -> 42
--- errors
InvalidCase("invalid list branch")
InvalidCase("invalid list branch")
