crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__list__delay_head.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List mkCons (delay (let p#37 : int = 42 in
p#37)) (trace "tail" in (con (list integer) [7])) of
  Nil -> trace "cold" in error
  Cons ignored#38 ignored#39 -> trace "body" in 21
--- unoptimized UPLC
(program 1.1.0
  (case
    [[(force (builtin mkCons)) (delay [(lam p_37 p_37) (con integer 42)])]
      (force
        [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])]
    (lam ignored_38
      (lam ignored_39
        (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
    (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
--- optimized Core
let anf#4 : list int = trace "tail" in (con (list integer) [7]) in
let anf#5 : list int = mkCons (delay 42) anf#4 in
trace "body" in 21
--- optimized UPLC
(program 1.1.0
  [(lam builtin_3
    [(lam builtin_4
      [(lam anf_1
        [(lam anf_2 (force [[builtin_3 (con string "body")] (delay (con integer 21))]))
          [[builtin_4 (delay (con integer 42))] anf_1]])
        (force [[builtin_3 (con string "tail")] (delay (con (list integer) [7]))])])
      (force (builtin mkCons))])
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
let anf#40 : list int = trace "tail" in (con (list integer) [7]) in
let anf#41 : list int = mkCons (delay (let p#37 : int = 42 in
p#37)) anf#40 in
case@List anf#41 of
  Nil -> trace "cold" in error
  Cons ignored#38 ignored#39 -> trace "body" in 21
--- isolated folded Core
let anf#40 : list int = trace "tail" in (con (list integer) [7]) in
let list_field#42 : @delay int = delay (let p#37 : int = 42 in
p#37) in
let anf#41 : list int = mkCons list_field#42 anf#40 in
let ignored#38 : int = list_field#42 in
let ignored#39 : list int = anf#40 in
trace "body" in 21
--- isolated cleaned Core
let anf#40 : list int = trace "tail" in (con (list integer) [7]) in
let anf#41 : list int = mkCons (delay 42) anf#40 in
trace "body" in 21
--- isolated UPLC before
(program 1.1.0
  [(lam anf_40
    [(lam anf_41
      (case
        anf_41
        (lam ignored_38
          (lam ignored_39
            (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))])))
        (force [[(force (builtin trace)) (con string "cold")] (delay (error))])))
      [[(force (builtin mkCons)) (delay [(lam p_37 p_37) (con integer 42)])] anf_40]])
    (force
      [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
--- isolated UPLC after
(program 1.1.0
  [(lam anf_40
    [(lam anf_41
      (force [[(force (builtin trace)) (con string "body")] (delay (con integer 21))]))
      [[(force (builtin mkCons)) (delay (con integer 42))] anf_40]])
    (force
      [[(force (builtin trace)) (con string "tail")] (delay (con (list integer) [7]))])])
--- result
error: NotAConstant(Delay(Constant(Integer(42)), Cons { data: Con(ProtoList(Integer, [Integer(7)])), next: Empty }))
--- logs
["tail"]
