crates/nash-codegen/src/optimizer_tests/snapshots/nash_codegen__optimizer_tests__known_case__list__empty.snap
---
source: crates/nash-codegen/src/optimizer_tests/known_case.rs
expression: "crate::harness::pass_snapshot(b.arena, original,\nformat!(\"--- isolated ANF input\\n{}\\n--- isolated folded Core\\n{}\\n--- isolated cleaned Core\\n{}\\n--- isolated UPLC before\\n{}\\n--- isolated UPLC after\\n{}\\n--- result\\n{}\\n--- logs\\n{:?}\",\npretty(before), pretty(folded), pretty(after), left.uplc, right.uplc,\nright.result, right.logs))"
---
--- unoptimized Core
case@List (con (list integer) []) of
  Cons head#1 tail#2 -> trace "cons" in tail#2
  Nil -> trace "nil" in (con (list integer) [0])
--- unoptimized UPLC
(program 1.1.0
  (case
    (con (list integer) [])
    (lam head_1
      (lam tail_2
        (force [[(force (builtin trace)) (con string "cons")] (delay tail_2)])))
    (force
      [[(force (builtin trace)) (con string "nil")] (delay (con (list integer) [0]))])))
--- optimized Core
trace "nil" in (con (list integer) [0])
--- optimized UPLC
(program 1.1.0
  [(lam builtin_1
    (force [[builtin_1 (con string "nil")] (delay (con (list integer) [0]))]))
    (force (builtin trace))])
--- isolated pass
--- isolated ANF input
case@List (con (list integer) []) of
  Cons head#1 tail#2 -> trace "cons" in tail#2
  Nil -> trace "nil" in (con (list integer) [0])
--- isolated folded Core
trace "nil" in (con (list integer) [0])
--- isolated cleaned Core
trace "nil" in (con (list integer) [0])
--- isolated UPLC before
(program 1.1.0
  (case
    (con (list integer) [])
    (lam head_1
      (lam tail_2
        (force [[(force (builtin trace)) (con string "cons")] (delay tail_2)])))
    (force
      [[(force (builtin trace)) (con string "nil")] (delay (con (list integer) [0]))])))
--- isolated UPLC after
(program 1.1.0
  (force
    [[(force (builtin trace)) (con string "nil")] (delay (con (list integer) [0]))]))
--- result
(con (list integer) [0])
--- logs
["nil"]
